2.15.0 (11-05-2019)
- Improvement: added accepted values implementation to qualitative grades