@@ -1,2 +1,6 @@
+- Improvement: AverageEntry API cleanup  
+- Bug Fix: Collecting target curriculum lines for ICurriculumEntry requires curricular plan because this information is specific to calculated curriculum / curricular plan
+
+
 2.15.0 (11-05-2019)
 - Improvement: added accepted values implementation to qualitative grades
